<build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.11.0</version>
            <configuration>
                <source>11</source>
                <target>11</target>
                <compilerArgs>
                    <arg>--add-exports</arg>
                    <arg>jdk.httpserver/com.sun.net.httpserver=ALL-UNNAMED</arg>
                    <arg>--add-opens</arg>
                    <arg>java.base/java.time=ALL-UNNAMED</arg>
                </compilerArgs>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0</version>
            <configuration>
                <argLine>--add-exports jdk.httpserver/com.sun.net.httpserver=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED</argLine>
            </configuration>
        </plugin>
    </plugins>
</build>